Minor Changes in Models, Url, Views and Template

--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -53,7 +53,7 @@
                         </div>
                         <div class="contact-details">
                             <h5>support@traveloholic.com</h5>
-                            <p>Send us your query anytime!</p>
+                            <p>Send us your query anytime 24*7 !</p>
                         </div>
                     </div>
                 </div>
