--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -77,7 +77,7 @@
                     We take care of your travel and do our best to make sure you get the best journey
                 </p>
                 <h3 class="h3 text-white">It's Time To Travel Canada</h3><br><br>
-                <a href="#" class="primary-btn text-uppercase">Get Started</a>
+                <a href="{% url 'app:about' %}" class="primary-btn text-uppercase" >Get Started</a>
             </div>
 {#            <div class="col-lg-4 col-md-6 banner-right" style="margin-top: 120px;">#}
 {#                <ul class="nav nav-tabs" id="myTab" role="tablist">#}
