Edits in index.html

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -349,7 +349,7 @@
             <div class="col-lg-3  col-md-6 col-sm-6">
                 <div class="single-footer-widget">
                     <h6>About Traveloholic</h6>
-                    <p>"Traveling – it leaves you speechless, then turns you into a storyteller. You see things you never imagined seeing, you learn things you never knew you needed to learn, and you meet people you never thought you’d meet. It’s an adventure, a journey, a way to escape the mundane and embrace the unknown. It’s a way to discover yourself, to challenge your limits, and to find your place in the world. It’s a reminder that life is short and that there is so much to experience beyond the confines of your everyday routine. So go, explore, and let the world change you in ways you never thought possible."</p>
+                    <p>"Traveling – it leaves you speechless, then turns you into a storyteller. You see things you never imagined seeing, you learn things you never knew you needed to learn, and you meet people you never thought you’d meet. It’s an adventure, a journey, a way to escape the mundane and embrace the unknown, discover yourself, to challenge your limits, and to find your place in the world."</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6">
