--- a/app/templates/app/packages.html
+++ b/app/templates/app/packages.html
@@ -69,7 +69,6 @@
         </div>
     </section>
 
-
     <!-- Start destinations Area -->
     <section class="destinations-area section-gap">
         <div class="container">
@@ -77,7 +76,7 @@
                 <div class="menu-content pb-40 col-lg-8">
                     <div class="title text-center">
                         <h1 class="mb-10">Popular Packages</h1>
-                        <p>Make memories that will last a lifetime in [destination] - the perfect vacation spot!.</p>
+                        <p>Make memories that will last a lifetime.</p>
                     </div>
                 </div>
             </div>
