hotelbooking.html added, Hotels. html changed, confirm.html changed & added functionalities in url.py and views.py

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -68,7 +68,6 @@
         <div class="row align-items-center justify-content-between d-flex">
             <div id="logo">
                 <a href="{% url 'app:index' %}" class="text-white" style="font-size: 20px">Traveloholic </a>
-{#                <a href="index.html"><img src="/staticfiles/img/traveloholic.png" height="50px" width="70px" alt="" title=""/></a>#}
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
@@ -76,7 +75,7 @@
                     <li><a href="{% url 'app:about' %}">About</a></li>
                     <li><a href="{% url 'app:package' %}">Packages</a></li>
                     <li><a href="{% url 'app:hotels' %}">Hotels</a></li>
-                    <li><a href="{% url 'app:contact' %}">Contact</a></li>
+                    <li><a href="{% url 'app:contact' %}">Contact Us</a></li>
                     <li><a href="{% url 'app:users-profile' %}">User Profile</a></li>
                        <li><a href="{% url 'app:logout' %}">Logout</a></li>
                 </ul>
