--- a/app/templates/app/confirm.html
+++ b/app/templates/app/confirm.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>{{ name }}</h1>
-    <h1>Total Persons: {{persons}}</h1>
-    <h1>Total cost of Stay: {{cost}}</h1>
-    <h1>Your mail: {{email}}</h1>
-    <h3>Click here to proceed to payment:<li><a href="payment">Payment Portal</a></li></h3>
+    <h1>Total Persons: {{ persons }}</h1>
+    <h1>Total cost of Stay: {{ cost }}</h1>
+    <h1>Your mail: {{ email }}</h1>
+    <h3>Click here to proceed to payment:<li><a href="http://127.0.0.1:8000/payment.html">Payment Portal</a></li></h3>
 </body>
 </html>
