--- a/app/templates/app/hotelbooking.html
+++ b/app/templates/app/hotelbooking.html
@@ -59,14 +59,14 @@
   <section class="form-payment" style="margin-top:30px;padding:50px; line-height:30px;">
 
 	<div class="container">
-      <form id="bookingForm" action="http://127.0.0.1:8000/confirm/{{ package.uuid }}" style="margin-top: 30px" method="POST">
+      <form id="bookingForm" action="http://127.0.0.1:8000/hotelconfirm/{{ hotel.uuid }}" style="margin-top: 30px" method="POST">
         {% csrf_token %}
           <div class="row">
           <div class="col-sm-6">
             <h3>Billing Address</h3>
               <br>
-            <h3><label for="pkgname"><i class="fa "></i> Package: {{ package.package_name }} </label>
-            <label for="pkgprice"><i class="fa"></i> ${{ package.package_price }} </label>
+            <h3><label for="pkgname"><i class="fa "></i> Hotel: {{ hotel.hotel_name }} </label>
+            <label for="pkgprice"><i class="fa"></i> ${{ hotel.hotel_price }} </label>
             </h3><br>
             <input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''"
                                        onblur="this.placeholder = 'Enter your name'"
