--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -45,7 +45,7 @@
     <div class="container main-menu">
         <div class="row align-items-center justify-content-between d-flex">
             <div id="logo">
-                <a href="index.html" style="color: aqua;font-size: 20px;font-weight: bolder;">Traveloholic </a>
+                <a href="index.html" style="color: aqua;font-size: 20px;font-weight: bolder;">Traveloholic</a>
 {#                <a href="index.html"><img src="/staticfiles/img/traveloholic.png" height="50px" width="70px" alt="" title=""/></a>#}
             </div>
             <nav id="nav-menu-container">
@@ -54,7 +54,7 @@
                     <li><a href="{% url 'app:about' %}">About</a></li>
                     <li><a href="{% url 'app:package' %}">Packages</a></li>
                     <li><a href="{% url 'app:hotels' %}">Hotels</a></li>
-                    <li><a href="{% url 'app:contact' %}">Contact</a></li>
+                    <li><a href="{% url 'app:contact' %}">Contact Us</a></li>
                     <li><a href="payment.html">Payment</a></li>
                     <li><a href="{% url 'app:users-profile' %}">User Profile</a></li>
                      <li><a href="{% url 'app:logout' %}">Logout</a></li>
