Changes in hotels.html, packages.html, and views.py

--- a/app/templates/app/hotels.html
+++ b/app/templates/app/hotels.html
@@ -68,7 +68,9 @@
                                 </p>
                                 <ul class="package-list">
                                     <li class="d-flex justify-content-between align-items-center">
-                                        <span>Hotel Price (Per day)</span>
+                                        <span>
+                                            Hotel Price (Per day)
+                                        </span>
                                         <span>
                                         ${{ hotel_obj.hotel_price }}
                                     </span>
