--- a/app/templates/app/packages.html
+++ b/app/templates/app/packages.html
@@ -40,7 +40,9 @@
                             <img class="img-fluid" src="/staticfiles/img/packages/hot-deal1.jpg" alt="">
                         </div>
                         <div class="price-detials">
-                            <a href="{% url 'app:locationinfo' %}" class="price-btn">Starting From <span>$200</span></a>
+                            <a
+                                    href="{% url 'app:locationinfo' %}" class="price-btn">Starting From <span>$200</span>
+                            </a>
                         </div>
                         <div class="details">
                             <h4 class="text-white">Ancient Architecture</h4>
