--- a/app/templates/app/hotels.html
+++ b/app/templates/app/hotels.html
@@ -20,24 +20,25 @@
     </section>
     <!-- End banner Area -->
     <div class=" px-4  align-items-center" style="padding-left: 100px; padding-right: 100px">
-        <form class="align-items-center">
-            <div class="row mt-3 align-items-center">
+        <form class="align-items-center" action="search_hotels" method="POST">
+            {% csrf_token %}
+            <div class="row justify-content-center">
 
-                <div class="col-md-2" style="padding-left: 650px">
-                    <div class="form-inline">
-                        <label class="" for="exampleFormControlSelect1">Search</label>
-                        <input name="search" class="form-control" value="{{ search }}" placeholder="Search">
+                <div class="col-md-2 justify-content-center">
+                    <div class="form-inline" style="flex-wrap:nowrap">
+                        <label style="margin:10px;font-weight: 600;font-size: 20px;color: black" for="exampleFormControlSelect1">Search</label>
+                        <input name="search" class="form-control" value="{{ search }}" placeholder="Search City">
+                        <button type="submit" class="primary-btn text-uppercase">Find</button>
                     </div>
 
                 </div>
             </div>
+
         </form>
 
 
     </div>
-    <div class="row justify-content-md-center col-md-auto">
-        <button style="margin-top: 30px;" type="submit" class="primary-btn text-uppercase">Find</button>
-    </div>
+
     <!-- Start destinations Area -->
     <section class="destinations-area section-gap">
         <div class="container">
