--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -1,4 +1,5 @@
 {% extends "app/base.html" %}
+{% load static %}
 {% block title %}User Profile{% endblock title %}
 {% block start %}
     <section class="relative about-banner">
