--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -45,16 +45,14 @@
 
             </div>
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Username</label>
-                <input type="text" name="username" required class="form-control" id="exampleInputEmail1"
-                       aria-describedby="emailHelp">
+                <label for="exampleInputUser" class="form-label">Username</label>
+                <input type="text" name="username" required class="form-control" id="exampleUser">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
-            {#            <div class="mb-3">#}
-            {#                <label for="exampleInputEmail1" class="form-label">Email ID</label>#}
-            {#                <input type="text" name="email" required class="form-control" id="exampleInputEmail1"#}
-            {#                       aria-describedby="emailHelp">#}
-            {#        </div>#}
+{#            <div class="mb-3">#}
+{#                <label for="exampleInputEmail1" class="form-label">Email ID</label>#}
+{#                <input type="text" name="email" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">#}
+{#                    </div>#}
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
                 <input type="password" name="password" required class="form-control" id="exampleInputPassword1">
@@ -81,5 +79,6 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
 
+</div>
 </body>
 </html>
