--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -31,7 +31,7 @@
                     <h6>About Us</h6>
                     <h1>Who We Are?</h1>
                     <p>
-                        We are a small scale start-up, and we pledge to serve our best to all the customers we get and
+                        We are a small scale start-up, and we pledge to serve our very best to all the customers we get and
                         get the best packages at affordable prices.
                         you can travel all over canada with us
                     </p>
