--- a/app/templates/app/confirm.html
+++ b/app/templates/app/confirm.html
@@ -8,6 +8,6 @@
     <h1>Total Persons: {{ persons }}</h1>
     <h1>Total cost of Stay: {{ cost }}</h1>
     <h1>Your mail: {{ email }}</h1>
-    <h3>Click here to proceed to payment:<li><a href="http://127.0.0.1:8000/payment.html">Payment Portal</a></li></h3>
+    <h3>Click here to proceed to payment:<li><a href="http://127.0.0.1:8000/payment/">Payment Portal</a></li></h3>
 </body>
 </html>
