--- a/app/templates/app/hotelbooking.html
+++ b/app/templates/app/hotelbooking.html
@@ -106,7 +106,7 @@
                                     </div>
                             <div class="col-lg-12">
                                 <div class="alert-msg" style="text-align: left;"></div>
-                                <button name="btnS" class="genric-btn primary" style="float: right;margin-top: 20px;margin-right: 760px;" type="submit">PAY NOW</button>
+                                <button name="btnS" class="genric-btn primary" style="float: right;margin-top: 20px;margin-right: 760px;" type="submit">BOOK NOW</button>
                             </div>
                         </div>
       </form>
