--- a/app/templates/app/hotels.html
+++ b/app/templates/app/hotels.html
@@ -83,7 +83,7 @@
                                         </span>
                                     </li>
                                     <li class="d-flex justify-content-between align-items-center">
-                                        <a href="{% url 'app:hotelbooking' hotel_obj.uuid %}" class="price-btn align-content-md-center">Book now</a>
+                                        <a href="{% url 'app:hotelbooking' hotel_obj.uuid %}" class="price-btn align-content-md-center" style="margin-left: 35%">Book now</a>
                                     </li>
                                 </ul>
                             </div>
