--- a/app/templates/app/packages.html
+++ b/app/templates/app/packages.html
@@ -116,7 +116,7 @@
                                         <p class="price-btn1">${{ package_obj.package_price }} </p>
                                     </li>
                                     <li class="d-flex justify-content-between align-center">
-                                  <button class="Book Now-btn"><a href="{% url 'app:booking' package_obj.uuid %}" style="color: white">Book Now</a></button>
+                                  <button class="Book Now-btn" style="margin-left: 35%"><a href="{% url 'app:booking' package_obj.uuid %}" style="color: black">Book Now</a></button>
                                     </li>
                                 </ul>
                             </div>
