--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -16,7 +16,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid contact-page-area section-gap">
+    <section class=" container container-fluid contact-page-area section-gap">
         <div class=" display-2 row my-3 p-3">
             <h3>Hello, {{ user.username }}</h3>
         </div>
